# jugo

./: Cargo.toml  bacon.toml
benches/: slide_from.rs
examples/: 6464.rs  interactive.rs  random.rs  slide.rs  test.rs  test2.rs
src/: direction.rs  lib.rs  lib.rs~
src/impls/: heap.rs  mod.rs  ndarray.rs  stack.rs  vec.rs
