[package]
name = "jugo"
version = "0.0.0"
edition = "2021"

[dependencies]
ignore = { git = "https://github.com/hiraginoyuki/rust-ignore" }
itertools = "0.11.0"
derive_more = "0.99.17"
num = "0.4.1"
omniswap = "0.1.0"
num_cpus = "1.16.0"

ndarray = "0.15.6"

rand = "0.8"
rand_xoshiro = "0.6.0"

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
console = "0.15.7"
criterion = { version = "0.5.1", features = ["html_reports"] }
# once_cell = "1"

[[bench]]
name = "slide_from"
harness = false
